--- a/make_data_Is.ipynb
+++ b/make_data_Is.ipynb
@@ -94,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▌         | 612/10000 [22:57<5:56:39,  2.28s/it]"
+      " 26%|██▋       | 2642/10000 [1:39:22<4:31:50,  2.22s/it]"
      ]
     }
    ],
@@ -135,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
